home route added

--- a/src/views/confirmation.html
+++ b/src/views/confirmation.html
@@ -50,6 +50,9 @@
         Thank you for your transaction. You will receive a confirmation email
         shortly.
       </p>
+      <a href="https://car-washing-system-client.vercel.app/"
+        ><button>Back To Home</button></a
+      >
     </div>
   </body>
 </html>
